--- a/index.html
+++ b/index.html
@@ -56,53 +56,53 @@
 
         <div id="rotating-image-mosaic">
             <div class='image-tile'>
-              <div class='front' style="background: url(assets/img/_MG_0226.jpg) center/cover no-repeat;"></div>
-              <div class='back' style="background: url(assets/img/_MG_0331.jpg) center/cover no-repeat;"></div>
+              <div class='front' style="background: url(./assets/img/_MG_0226.jpg) center/cover no-repeat;"></div>
+              <div class='back' style="background: url(./assets/img/_MG_0331.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
               <div class='front' style="background: url('assets/img/_MG_0237.jpg') center/cover no-repeat;"></div>
-              <div class='back' style="background: url(assets/img/_MG_0230.jpg) center/cover no-repeat;"></div>
+              <div class='back' style="background: url(./assets/img/_MG_0230.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-              <div class='front' style="background: url(assets/img/_MG_0235.jpg) center/cover no-repeat;"></div>
-              <div class='back' style="background: url(assets/img/_MG_0294.jpg) center/cover no-repeat;"></div>
+              <div class='front' style="background: url(./assets/img/_MG_0235.jpg) center/cover no-repeat;"></div>
+              <div class='back' style="background: url(./assets/img/_MG_0294.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(assets/img/_MG_0244.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(assets/img/_MG_9327.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_0244.jpg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9327.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(assets/img/_MG_0308.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(assets/img/_MG_9339.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_0308.jpg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9339.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(assets/img/_MG_9373.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(assets/img/_MG_9680.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9373.jpg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9680.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(assets/img/_MG_0241.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(assets/img/_MG_9713.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_0241.jpg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9713.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(assets/img/_MG_9660.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(assets/img/_MG_9691.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9660.jpg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9691.jpg) center/cover no-repeat;"></div>
             </div>
 
             <div class='image-tile'>
-                <div class='front' style="background: url(assets/img/_MG_9385.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(assets/img/_MG_4069.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9385.jpg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_4069.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(assets/img/_MG_9577.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(assets/img/_MG_9389.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9577.jpg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9389.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(assets/img/_MG_9700.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(assets/img/_MG_9695.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9700.jpg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9695.jpg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(assets/img/_MG_9343.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(assets/img/_MG_9602.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9343.jpg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9602.jpg) center/cover no-repeat;"></div>
             </div>
               
             <!-- Add more tiles as needed -->
@@ -211,10 +211,10 @@ document.addEventListener('DOMContentLoaded', function() {
     ];
 
     const images = [
-        "assets/img/_MG_9616.jpg",
-        "assets/img/_MG_0226.jpg",
-        "assets/img/_MG_0237.jpg",
-        "assets/img/_MG_0241.jpg"
+        "./assets/img/_MG_9616.jpg",
+        "./assets/img/_MG_0226.jpg",
+        "./assets/img/_MG_0237.jpg",
+        "./assets/img/_MG_0241.jpg"
     ];
 
     let currentIndex = 0;
