--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p id="animated-text">Proste zasady: przyjdź, zagraj, poznaj nowych ludzi, zjedz pizzę i ciesz się grą!</p>
                 </div>
                 <div class="image-container">
-                    <img id="animated-image" src="assets/img/_MG_9616.jpg" alt="Zdjęcie Squasha">
+                    <img id="animated-image" src="assets/img/_MG_9616.jpeg" alt="Zdjęcie Squasha">
                 </div>
             </div>
         </div>
@@ -56,53 +56,53 @@
 
         <div id="rotating-image-mosaic">
             <div class='image-tile'>
-              <div class='front' style="background: url(./assets/img/_MG_0226.jpg) center/cover no-repeat;"></div>
-              <div class='back' style="background: url(./assets/img/_MG_0331.jpg) center/cover no-repeat;"></div>
+              <div class='front' style="background: url(./assets/img/_MG_0226.jpeg) center/cover no-repeat;"></div>
+              <div class='back' style="background: url(./assets/img/_MG_0331.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-              <div class='front' style="background: url('assets/img/_MG_0237.jpg') center/cover no-repeat;"></div>
-              <div class='back' style="background: url(./assets/img/_MG_0230.jpg) center/cover no-repeat;"></div>
+              <div class='front' style="background: url('assets/img/_MG_0237.jpeg') center/cover no-repeat;"></div>
+              <div class='back' style="background: url(./assets/img/_MG_0230.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-              <div class='front' style="background: url(./assets/img/_MG_0235.jpg) center/cover no-repeat;"></div>
-              <div class='back' style="background: url(./assets/img/_MG_0294.jpg) center/cover no-repeat;"></div>
+              <div class='front' style="background: url(./assets/img/_MG_0235.jpeg) center/cover no-repeat;"></div>
+              <div class='back' style="background: url(./assets/img/_MG_0294.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(./assets/img/_MG_0244.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(./assets/img/_MG_9327.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_0244.jpeg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9327.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(./assets/img/_MG_0308.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(./assets/img/_MG_9339.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_0308.jpeg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9339.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(./assets/img/_MG_9373.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(./assets/img/_MG_9680.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9373.jpeg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9680.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(./assets/img/_MG_0241.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(./assets/img/_MG_9713.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_0241.jpeg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9713.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(./assets/img/_MG_9660.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(./assets/img/_MG_9691.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9660.jpeg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9691.jpeg) center/cover no-repeat;"></div>
             </div>
 
             <div class='image-tile'>
-                <div class='front' style="background: url(./assets/img/_MG_9385.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(./assets/img/_MG_4069.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9385.jpeg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_4069.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(./assets/img/_MG_9577.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(./assets/img/_MG_9389.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9577.jpeg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9389.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(./assets/img/_MG_9700.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(./assets/img/_MG_9695.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9700.jpeg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9695.jpeg) center/cover no-repeat;"></div>
             </div>
             <div class='image-tile'>
-                <div class='front' style="background: url(./assets/img/_MG_9343.jpg) center/cover no-repeat;"></div>
-                <div class='back' style="background: url(./assets/img/_MG_9602.jpg) center/cover no-repeat;"></div>
+                <div class='front' style="background: url(./assets/img/_MG_9343.jpeg) center/cover no-repeat;"></div>
+                <div class='back' style="background: url(./assets/img/_MG_9602.jpeg) center/cover no-repeat;"></div>
             </div>
               
             <!-- Add more tiles as needed -->
@@ -211,10 +211,10 @@ document.addEventListener('DOMContentLoaded', function() {
     ];
 
     const images = [
-        "./assets/img/_MG_9616.jpg",
-        "./assets/img/_MG_0226.jpg",
-        "./assets/img/_MG_0237.jpg",
-        "./assets/img/_MG_0241.jpg"
+        "./assets/img/_MG_9616.jpeg",
+        "./assets/img/_MG_0226.jpeg",
+        "./assets/img/_MG_0237.jpeg",
+        "./assets/img/_MG_0241.jpeg"
     ];
 
     let currentIndex = 0;
